# langchain-project

./: .env  README.md  pyproject.toml
.data/chroma_db/: chroma.sqlite3
data/: 01. The Eye of the World.epub  sample-file.txt
data/chroma_db/58c4c008-ea19-48d3-a5a2-a4e5f234e311/: index_metadata.pickle
data/faiss_youtube_index/: index.pkl
