[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = ""
authors = ["VLTSankalpa <wltsankalpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
langchain = "^0.3.20"
langchain-core = "^0.3.43"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.8"
langchain-google-genai = "^2.0.11"
langchain-anthropic = "^0.3.9"
langgraph = "^0.3.5"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.3.2"
youtube-transcript-api = "^0.6.3"
pypdf = "^5.3.1"
unstructured = {extras = ["epub"], version = "^0.16.25"}
matplotlib = "^3.10.1"
pandas = "^2.2.3"
faiss-cpu = "^1.10.0"
langchain-pinecone = "^0.2.3"
weaviate-client = "^4.11.1"
langchain-weaviate = "^0.0.4"
langchain-milvus = "^0.1.8"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
